syntax = "proto3";

option go_package = "./pb";

package pb;

message MQputRequest {
	string qname = 1;
	bytes value = 2;
}

  message MQputReply {
	bytes value = 1;
}

  message MQpopRequest {
	string qname = 1;
}

  message MQpopReply {
	bytes value = 1;
}

service MQservice {
	rpc MQput (MQputRequest) returns (MQputReply) {}
	rpc MQpop (MQpopRequest) returns (MQpopReply) {}
}